# feather-nrf52-pro-testing-rs

./: Cargo.toml  README.md
.cargo/: config
rtic-testing/: .gitignore  Cargo.toml  Embed.toml
rtic-testing/.cargo/: config
rtic-testing/src/: main.rs  monotonic_timer0.rs
sh1107-testing/: Cargo.toml  Embed.toml
sh1107-testing/.cargo/: config
sh1107-testing/src/: main.rs
