[package]
name = "nrf52-feather-testing"
version = "0.0.1"
edition = "2021"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
cortex-m-rtic = "1.0.0"
fugit = "0.1.2"
panic-halt = "0.2.0"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
nrf52832-hal = "0.14.1"
sh1107 = {version = "0.3.5", path = "../../sh1107"}
embedded-graphics = "0.7.1"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
