[package]
name = "sh1107-testing"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
nrf52832-hal = "0.14.1"
sh1107 = {version = "0.3.5", path = "../../sh1107"}
